--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Dandugulakalyan.github.io/books",
+  "homepage": "https://Dandugulakalyan.github.io/patashala",
   "name": "openbook",
   "version": "0.1.0",
   "private": true,
